--- a/style/style.css
+++ b/style/style.css
@@ -163,10 +163,9 @@ body {
                 gap: 30px;
                 width: 100vw;
                 margin: 0 calc(50% - 50vw);
-                height: 100vh;
+                height: 100svh;
                 background: var(--main-color);
                 opacity: 1;
-                overflow: auto;
 
                 li {
                     text-align: center;
@@ -199,7 +198,6 @@ body {
             ul.open {
                 right: 0%;
                 transition: 0.5s;
-                overflow: hidden;
             }
             
             ul.hide {
